# oatpp-starter

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  build_app.sh
main/: CMakeLists.txt
main/src/: App.cpp  AppComponent.hpp  Logger.hpp
main/src/controller/: MyController.cpp
main/test/: tests.cpp
src/: App.cpp  AppComponent.hpp
src/controller/: MyController.hpp
src/dto/: DTOs.hpp
starter.xcodeproj/: project.pbxproj
starter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
starter.xcodeproj/project.xcworkspace/xcuserdata/leonid.xcuserdatad/: UserInterfaceState.xcuserstate
starter.xcodeproj/xcuserdata/leonid.xcuserdatad/xcschemes/: xcschememanagement.plist
test/: MyControllerTest.cpp  MyControllerTest.hpp  tests.cpp
test/app/: MyApiTestClient.hpp  TestComponent.hpp
utility/: install-oatpp-modules.sh
